tests/typecheck/should_fail/T7368.hs
module T7368 where

f  = b  (l  Nothing)

l :: b a -> c b
l = undefined

b :: (a -> b) -> c
b = undefined